syntax = "proto3";

package seer;

option go_package = "github.com/kaolnwza/muniverse/seer/internal/adapters/grpc/proto/pb";

message SeerRequest {
  string user_uuid = 1;
}

message SeerUUIDRequest {
  string seer_uuid = 1;
}

message SeerResponse {
    string uuid = 1;
    bool onsite_available = 2;
    bool chat_available = 3;
    bool call_available = 4;
    bool video_call_available = 5;
    string major = 6;
    string major_description = 7;
    string description_profile = 8;
    string map_coordinate = 9;
    string image_url = 10;
    string display_name = 11;
}

message UserUUIDResponse {
    string user_uuid = 1;
}

service SeerService {
  rpc GetSeerByUserUUID(SeerRequest) returns (SeerResponse);
  rpc GetUserUUIDBySeerUUID(SeerUUIDRequest) returns (UserUUIDResponse);
};

